galactic averages for goods First attempt at notifying for good mining stuff. Needs more detail in the message